# gdextension

./: .gitignore  CMakeLists.txt  README.md
include/gdextension/core/: CallError.hxx  Extension.hxx  ExtensionScript.hxx  Initialization.hxx  InstanceBinding.hxx  Interface.hxx  core.hxx
include/gdextension/object/: Object.hxx  ObjectHandle.hxx  Ptr.hxx  RawPtr.hxx  RefCounted.hxx  Register.hxx
include/gdextension/utils/: FixedString.hxx  TypeT.hxx
include/gdextension/variant/: Array.hxx  Color.hxx  Dictionary.hxx  NodePath.hxx  PackedArray.hxx  String.hxx  StringName.hxx  Variant.hxx  VariantTraits.hxx  Vector.hxx  Vector2.hxx  Vector3.hxx  VectorTraits.hxx
include/gdextension/variant/detail/: BuiltinMethod.hxx  VariantOps.hxx
src/core/: Interface.cxx
src/object/: Object.cxx  RefCounted.cxx
src/variant/: String.cxx  StringName.cxx  Variant.cxx
tests/basic/: lib.cxx
